src/renderer/App.css
:root {
  --Semi-Black: #080808;
  --Dark-Grey: #1d1d1d;
  --Semi-White: #f4f4f4;
  --CornerSize: 15px;
}

* {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  height: 100%;
}

::-webkit-scrollbar {
  width: 10px;
  background: var(--Dark-Grey);
  height: 10px;
}

::-webkit-scrollbar-track {
  border-radius: var(--CornerSize);
  margin: 15px;
  height: 80%;
}

::-webkit-scrollbar-thumb {
  background: var(--Semi-White);
  border-radius: var(--CornerSize);
  height: 80%;
}

#Title {
  font-weight: bold;
}

#DeckName {
  color: var(--Semi-White);
  font-weight: bold;
  height: 50px;
  font-size: 25px;
  border-radius: var(--CornerSize);
  border: none;
  outline: none;
  text-align: center;
  background-color: var(--Semi-Black);
  text-overflow: ellipsis;
  max-width: 100%;
  min-width: 100%;
  min-height: 50px;
  overflow-y: hidden;
}

.AppBody {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  position: absolute;
}

.AppContent {
  background: var(--Semi-Black);
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  color: var(--Semi-White);
  z-index: 0;
  align-items: center;
  padding: 20px;
  overflow-x: scroll;
}

.SideBarBody {
  display: flex;
  flex-direction: column;
  background: var(--Dark-Grey);
  height: 100%;
  width: 300px;
  align-items: center;
  justify-content: space-between;
  overflow: hidden;
  transition-duration: 0.5s;
  color: var(--Semi-White);
  box-shadow: 4px 0px 4px rgba(255, 255, 255, 0.15);
  padding-left: 14px;
  padding-right: 14px;
  z-index: 1;
}

@media screen and (max-width: 1000px) {
  .SideBarBody {
    min-width: 250px;
    height: 100%;
  }

  .SideBarCal {
    max-width: 200px;
    align-content: center;
    align-self: center;
    justify-content: center;
  }
}

.ScheduleName {
  color: var(--Semi-White);
  font-weight: bold;
  border-radius: var(--CornerSize);
  border: none;
  outline: none;
  background-color: var(--Semi-Black);
  text-overflow: ellipsis;
  max-width: 100%;
  min-width: 100%;
  overflow-y: hidden;
}

.VisibleSchedules {
  overflow-y: scroll;
  max-height: 30%;
  min-height: 30%;
  min-width: 100%;
  max-width: 100%;
  background-color: var(--Semi-Black);
  padding-left: 12px;
  border-radius: var(--CornerSize);
}

.ScheduleCheckbox {
  display: flex;
  align-content: center;
  text-align: center;
}

.WeeklyTime {
  display: flex;
  flex-direction: column;
  border-radius: var(--CornerSize);
  height: 100%;
}

#TimeFormat {
  background: var(--Dark-Grey);
  border-radius: 8px;
  color: var(--Semi-White);
  border: none;
  outline: none;
  padding: 4px;
  margin-right: 12px;
  font-size: 12px;
  transition-duration: 0.2s;
  transition-timing-function: ease-in;
}

#TimeFormat:hover {
  background: var(--Semi-Black);
  cursor: pointer;
}

.TimeElements {
  font-size: 12px;
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: space-between;
  align-items: end;
  padding-right: 12px;
  color: var(--Semi-White);
  list-style-type: none;
}

.WeeklyBody {
  background-color: var(--Dark-Grey);
  display: flex;
  border-radius: var(--CornerSize);
  height: 100%;
  min-width: 630px;
  max-width: 630px;
  margin-right: 20px;
  overflow: hidden;
}

.WeeklyBody:hover .DeleteButton,
.DeleteButton:hover {
  opacity: 1;
  cursor: pointer;
}

.DeleteButton {
  background-color: rgba(255, 0, 0, 0.1);
  outline: red solid 2px;
  opacity: 0;
  display: flex;
  min-width: 25px;
  min-height: 25px;
  max-width: 25px;
  max-height: 25px;
  border-radius: 50%;
  text-align: center;
  align-content: center;
  justify-content: center;
  justify-items: center;
  position: relative;
  top: 5px;
  right: 30px;
  transition-duration: 0.2s;
  transition-timing-function: ease-in;
}

.DayText {
  align-self: center;
  margin-bottom: 6px;
}

.DayDivider {
  font-size: 12px;
  display: flex;
  flex-direction: column;
  min-width: 90px;
  max-width: 90px;
  border-right: 1px solid rgba(255, 255, 255, 0.15);
  justify-content: flex-start;
  align-content: center;
  padding: 4px;
}

.DayDivider.EndDay {
  border-right: 0px solid var(--Semi-White);
}

.EventOverlay {
  background-color: rgba(0, 0, 255, 0.1);
  border-radius: 4px;
  outline: blue solid 2px;
  padding: 4px;
  margin: 4px 0;
  color: white;
  position: relative;
  min-width: 82px;
  max-width: 82px;
  overflow: hidden;
}

.EventOverlay:hover {
  overflow-wrap: break-word;
  min-width: 200px;
  min-height: 200px;
  z-index: 5;
  backdrop-filter: blur(10px);
  cursor: pointer;
}

.NewWeeklyBody {
  background: var(--Dark-Grey);
  background: linear-gradient(90deg, var(--Dark-Grey) 0%, var(--Semi-Black) 84%);
  background-size: 430px 1px;
  background-position: -100px;
  display: flex;
  border-radius: var(--CornerSize);
  height: 100%;
  min-width: 230px;
  max-width: 230px;
  margin-right: 20px;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  transition-duration: 0.2s;
  transition-timing-function: ease-in;
}

.NewWeeklyBody:hover {
  background-position: 0px;
  cursor: pointer;
}

.SideBarCal {
  display: flex;
  justify-self: flex-end;
  align-self: center;
  align-content: center;
  margin-bottom: 12px;
  min-height: 500px;
}

#DateDisplay {
  display: flex;
  align-self: center;
  align-content: center;
  justify-content: center;
}

#DateTable {
  align-self: center;
  align-content: center;
  border-spacing: 0px;
}

.DateWeek {
  transition-duration: 0.1s;
  transition-timing-function: ease-in;
  border-radius: var(--CornerSize);
  border: var(--CornerSize);
  overflow: hidden;
  border-collapse: separate;
  background-clip: padding-box;
  cursor: pointer;
}

td:first-child,
th:first-child {
  border-radius: var(--CornerSize) 0 0 var(--CornerSize);
}

td:last-child,
th:last-child {
  border-radius: 0 var(--CornerSize) var(--CornerSize) 0;
}

#UnSelectedWeek:hover {
  background: linear-gradient(90deg, var(--Dark-Grey) 0%, var(--Semi-Black) 84%);
  background-size: 200% 1px;
  background-position: 0px;
}

#SelectedWeek {
  background: linear-gradient(90deg, var(--Dark-Grey) 0%, var(--Semi-Black) 84%);
  background-size: 200% 1px;
  background-position: 300px;
}

#SelectedWeek:hover {
  background-position: 0px;
}

#DateDay {
  overflow: hidden;
  transition-duration: 0.1s;
  transition-timing-function: ease-in;
}

.AddCircle {
  font-size: 25px;
}

#MonthName {
  font-size: 20px;
  min-width: 105px;
  max-width: 105px;
}

.MonthButton {
  height: 50%;
  aspect-ratio: 1 / 1;
  text-align: center;
  align-self: center;
  margin: 8px;
  color: var(--Semi-White);
  background: rgba(0, 0, 0, 0);
  border-radius: 50%;
  border: none;
  outline: none;
  transition-duration: 0.2s;
  transition-timing-function: ease-in;
  cursor: pointer;
}

.MonthButton:hover {
  background: var(--Semi-Black)
}

#YearNum {
  color: var(--Semi-White);
  font-weight: bold;
  height: 50px;
  width: 30%;
  font-size: 20px;
  border-radius: var(--CornerSize);
  border: none;
  outline: none;
  text-align: center;
  background-color: var(--Semi-Black);
  align-self: center;
}

